  Added new option GalaxyDirectory, allowing you to set the location of your galaxies directory.
  Fixed bug where redirects would send you to wrong address
  Added Inputs on console page to delete a sector from the galaxies/sectors/ directory
  Extended input on console to show last 100 lines of manager and status log when toggled

1.1.7
  Added custom cronjob config options to manager-config.ini
  removed old not working restart announcement and changed cronjob restart command to announce every 1minute for 15 minutes
  Updated ApacheInstaller to ask for user/group, prior was setting it to root. witch would make the site inaccessible
  Added option to manager-config to keep backups of the player/alliance data. OFF by default.
  Added dropdown for viewing backups of Player data.
  Fixed (i hope) UpdateManager script
  optimized manager-config tab on server config page

1.1.6
  Moved player count/list to server log
  Added cronjob to refresh server log every 30seconds
  Moved home chat to server log
  Added toggle to console page to switch between console.log and server.log
  Moved ServerINI and ManagerConfig Descriptions to ServerConfigController
  `./manager stop` now uses server log instead of console log
  Added server log location option in PHPConfig
  Updated UpdateManager.sh to not reset or delete previous options in config file_put_contents
  Updated ApacheInstaller to reflect IP address
  Added Profile Parser page, witch parses through profiling_stats.txt
  Added mpm_itk support to ApacheInstall


1.1.5
  Fixed HighScore.php being erased on update
  Added commands enablerestart and disablerestart
  Added manager options -d, -o, -b, -v
  Added Mail parsing to player parser
  Added Mail player page net worth to net worth column
  Added Mail resources/money to player page
  Added file detection to zlib decompressor
  Fixed Session not renewing when the browser is left open for a long period of time